--- a/package.json
+++ b/package.json
@@ -1,16 +1,32 @@
 {
-  "name": "valueauth-js",
+  "name": "value-auth-js",
   "version": "1.0.0",
   "description": "ValueAuth JS (Typescript) library",
-  "main": "index.js",
   "repository": "https://digirock.backlog.jp/git/SMS/JS-API.git",
   "author": "Shumpei Kobayashi <skonb@me.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "./node_modules/.bin/tsc -p .",
+    "prepublish": "yarn build"
+  },
   "devDependencies": {
-    "typescript": "^4.0.2"
+    "@types/node": "^14.11.1",
+    "@types/webpack": "^4.41.22",
+    "ts-loader": "^8.0.4",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.2",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "jwt-simple": "^0.5.6",
     "typed-rest-client": "^1.7.3"
-  }
+  },
+  "files": [
+    "tsOutputs/**/*.js",
+    "tsOutputs/**/*.d.ts",
+    "tsOutputs/index.d.ts"
+  ],
+  "types": "tsOutputs/index.d.ts",
+  "main": "tsOutputs/index.js"
 }
