--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "@types/node": "^14.14.36",
     "ts-loader": "^8.0.18",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.3",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.5.0"
   },
   "dependencies": {
     "ipify2": "^1.1.0",
     "jwt-simple": "^0.5.6",
-    "typed-rest-client": "^1.8.3"
+    "typed-rest-client": "^1.8.3",
+    "typescript": "^4.2.3"
   },
   "files": [
     "tsOutputs/**/*.js",
